# tako-review

./: .gitignore  CLAUDE.md  DOCKER.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: clock.py  config.py  errors.py  ids.py  logging.py  metrics.py  security.py
backend/app/db/: engine.py  models.py  session.py
backend/app/middleware/: body_limit.py  rate_limit.py  request_id.py
backend/app/repositories/: feedback_repo.py  review_repo.py  telemetry_repo.py  user_repo.py
backend/app/routers/: auth.py  feedback.py  health.py  reviews.py  telemetry.py
backend/app/schemas/: auth.py  feedback.py  reviews.py  telemetry.py
backend/app/services/: auth_service.py  feedback_service.py  maintenance.py  review_service.py  telemetry_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_telemetry_event_event_index.py  0003_review_list_derived_columns.py  0004_user_telemetry_opt_out.py
backend/tests/: conftest.py  test_auth_guest.py  test_auth_oauth.py  test_config.py  test_coverage_gaps.py  test_errors.py  test_feedback.py  test_foundation.py  test_health.py  test_maintenance.py  test_metrics.py  test_middleware.py  test_request_id.py  test_requirements_lock.py  test_review_repo.py  test_reviews.py  test_reviews_scoping.py  test_security.py  test_telemetry.py  test_validation.py
docs/: submission-report.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.eval.json  tsconfig.json  tsconfig.node.json  (+1 more)
(+234 files in other folders)
