[project]
name = "code-review-backend"
version = "1.0.0"
description = "Thin FastAPI service for the in-browser code-review app (auth, history, feedback, telemetry)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "sqlalchemy==2.0.*",
    "alembic==1.13.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "authlib>=1.6.12",
    "httpx==0.27.*",
    "itsdangerous==2.*",
    "structlog==24.*",
    "starlette-prometheus>=0.3.0",
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff",
    "black",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom: Depends/Query/etc. in arg defaults is correct.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-branch --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
# Ratchet floor: raised to 92 after Task 4.2 added behavioral tests (measured 92.73%). Sits just
# below the real number so the gate passes today and bites on regressions. Raise toward 100 over time.
fail_under = 92
